--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -173,7 +173,6 @@
       display: flex;
       justify-content: center;
       align-items: center;
-/*       position: relative; */
       height: 420px;
       gap: 53px;
       margin: 56px;
@@ -184,24 +183,44 @@
   @media (max-width:992px){
     #hero-container{
         margin: 0 auto;
-        display: block;
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        justify-content: center;
+        align-content: center;
     }
     #hero-container p{
         margin: 0 auto;
-        display: block;
         margin-bottom: 15px;
-        padding: auto;
+        background: #f5f5f5;
+        opacity: 75%;
+        padding: 5px;
+        border-radius: 5px;
+        position: relative;
+
     } 
+    #hero-container .hero-image{
+        margin: 0 auto;
+        max-width: 300px;
+        width: 280px;
+        position: relative;
+    }
+    #hero-container h2{
+        margin: 0 auto;
+        margin-bottom: 15px;
+        background: #f5f5   
+        f5;
+        opacity: 75%;
+        padding: 5px;
+        border-radius: 5px;
+        position: relative;
+
+    }
+
     .cards-ofertas {
         margin: 0 auto;
         margin-top: 100px; 
     } 
-    .hero-image{/* 
-        max-width: 300px;
-        margin: 0 auto; */
-        width: 100%;
-        overflow: auto;
-    }
+    
   }
   #hero-container h2 {
       font-family: 'Poppins', sans-serif;
