--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -204,9 +204,15 @@
       flex-direction: column;
       align-items: center;
       margin-top: 60px;
+      overflow: hidden;
     }
 
     #hero-container .hero-promo img {
+      width:300px;
+      width: 100%;
+      height: auto;
+      margin: 0 auto;
+      overflow: hidden;
       position: absolute;
       place-items: center;
       z-index: 0;
@@ -214,13 +220,12 @@
     }
 
     #hero-container .hero-promo h2 {
-
       position: relative;
       z-index: 2;
     }
 
     #hero-container .hero-promo p {
-      width: 100%;
+      width: 80%;
       text-align: justify;
       font-size: 16px;
       line-height: 1.6;
