--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -192,6 +192,7 @@
     .shortcuts__menu ul li {
       width: 20%;
       height: 35px;
+      margin: 0 auto;
       font-size: 12px;
     }
 
@@ -244,6 +245,7 @@
       padding: 5px;
       position: relative;
       z-index: 2;
+      margin-left: 15px;
     }
     .hero-promo  button{
       position: relative;
