--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -40,6 +40,10 @@
     background-color: #000;
     border-bottom: 2px solid #060120;
     box-shadow: 0px 5px 15px #060120;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 99;
   }
 
   header .header-topper {
@@ -81,7 +85,7 @@
     background: #000;
     padding: 15px;
   }
-
+  
   #header-container .logo {
     display: flex;
     justify-content: center;
@@ -138,7 +142,12 @@
   .shortcuts__menu {
     max-width: 1200px;
     margin: 0 auto;
-    margin-top: 30px;
+    width: 100%;
+    margin-left: 0;
+    display: block;
+    position: relative;
+    margin-top: 150px;
+    margin-bottom: 30px;
   }
 
   .shortcuts__menu ul {
@@ -188,7 +197,10 @@
     header{
       width: 100%;
     }
-
+    .header-topper{
+      display: none;
+      
+    }
     .shortcuts__menu ul li {
       width: 20%;
       height: 35px;
@@ -208,54 +220,6 @@
       place-content: center;
     }
 
-    .hero-promo {
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin-top: 60px;
-      overflow: hidden;
-    }
-
-    #hero-container .hero-promo img {
-      width:300px;
-      width: 100%;
-      height: auto;
-      margin: 0 auto;
-      overflow: hidden;
-      position: absolute;
-      place-items: center;
-      z-index: 0;
-
-    }
-
-    #hero-container .hero-promo h2 {
-      position: relative;
-      z-index: 2;
-    }
-
-    #hero-container .hero-promo p {
-      width: 80%;
-      text-align: justify;
-      font-size: 16px;
-      line-height: 1.6;
-      margin-bottom: 2rem;
-      background-color: #f5f5f5;
-      opacity: 75%;
-      padding: 5px;
-      position: relative;
-      z-index: 2;
-      margin-left: 15px;
-    }
-    .hero-promo  button{
-      position: relative;
-      z-index: 2;
-    }
-    .hero-promo  i{
-      position: relative;
-      z-index: 2;
-    }
-
     .footer {
       width: 100%;
       height: 80px;
@@ -266,7 +230,85 @@
     }
 
   }
+  #hero-container{
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 500px;
+    background-image: url(../productos/hogar/banner1.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    top: 50px;
+    margin-bottom: 80px;
+    border-radius: 0px 0px 25px 25px;
+    position: relative;
+    color: #f5f5f5;
+    text-align: center;
+  }
+  .hero-promo {
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0, 22, 40, .45);
+    border-radius: 0px 0px 25px 25px;
 
+  }
+  
+  #hero-container .hero-promo h2 {
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+    color: #f5f5f5;
+    font-size: 30px;
+    margin: 20px;
+
+  }
+
+  #hero-container .hero-promo p {
+    width: 300px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px;
+    line-height: 1.6;
+    letter-spacing: 1px;
+    background-color: rgb(0, 22, 40, .45);
+    border-radius: 15px;
+    display: block;
+    position: relative;
+    margin: 25px;
+  }
+
+  #hero-container .hero-promo p span {
+    color: #000;
+    font-weight: 600;
+  }
+  .hero-promo  button{
+    background-color: transparent;
+    color: #fff;  
+    width: 80px;
+    height: 35px;
+    border-radius: 4px;
+    border:solid 1px #0d0d0d;
+    cursor: pointer;
+    font-family: 'Poppins', sans-serif;
+    text-transform: uppercase;
+    margin: 15px;
+    transition: .1;
+  }
+
+  .hero-promo button:hover {
+    /* filter: drop-shadow(2px 2px 0px rgb(185, 100, 255)) drop-shadow(2px 2px 0px rgb(103, 74, 255)) drop-shadow(2px 2px 0px rgb(12, 204, 238));
+    scale: 1.05; */
+    transform: scale(1.1);
+    font-weight: 700;
+    background-color: #0d0d0d;
+  }
+  .hero-promo  i {
+    color: #346add;
+  }
+  /* 
   .hero-promo {
     max-width: 1200px;
     min-width: 300px;
@@ -289,47 +331,7 @@
     border-radius: 10px;
   }
 
-  #hero-container .hero-promo h2 {
-    font-family: 'Roboto', sans-serif;
-    text-align: center;
-    color: #0f0f0f;
-    font-size: 30px;
-
-  }
-
-  #hero-container .hero-promo p {
-    font-family: 'Poppins', sans-serif;
-    font-size: 18px;
-    line-height: 1.6;
-    letter-spacing: 1px;
-
-  }
-
-  #hero-container .hero-promo p span {
-    color: #000;
-    font-weight: 600;
-  }
-  .hero-promo  button{
-    background-color: #346add;
-    color: #fff;  
-    width: 80px;
-    height: 35px;
-    border-radius: 4px;
-    border:none;
-    cursor: pointer;
-    font-family: 'Poppins', sans-serif;
-    text-transform: uppercase;
-    margin: 15px;
-  }
-
-  .hero-promo button:hover {
-    filter: drop-shadow(2px 2px 0px rgb(185, 100, 255)) drop-shadow(2px 2px 0px rgb(103, 74, 255)) drop-shadow(2px 2px 0px rgb(12, 204, 238));
-    scale: 1.05;
-  }
-  .hero-promo  i {
-    color: #346add;
-  }
-
+ */
   /* Cards */
 
   .cards-container {
@@ -468,9 +470,10 @@
     max-width: 1200px;
     margin: 0 auto;
     height: 500px;
-    padding: 15px;
+    position: relative;
     background-image: url(/assets/productos/hogar/blur-close-up-device-442576-1000x665.jpeg);
     background-repeat: no-repeat;
+    background-position: center;
     background-size: cover;
     color: #0a0330;
     text-align: center;
@@ -478,20 +481,63 @@
     margin-bottom: 60px;
     margin-top: 60px;
     border-radius: 8px;
+    display: flex;
+    justify-content: center;
   }
-
-  .nota {
+  .hogar-content {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 22, 40, .45 );
+    border-radius: 8px;
+    position: relative;
+  }
+  .hogar h2{
+    color: #f5f5f5;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 2rem;
+    font-weight: 700;
+    position: absolute;
+    z-index: 3;
+    margin-top: 80px;
+    margin-bottom: 80px;
+  }
+  .celulares {
     max-width: 1200px;
     margin: 0 auto;
-    height: 500px;
-    padding: 15px;
+    height: 500px;  
+    position: relative;
     background-image: url(/assets/productos/Celulares/s22Ultrawallppr.jpg);
     background-repeat: no-repeat;
-    overflow: fill;
+    background-position: center;
     color: #f5f5f5;
     text-align: center;
     text-transform: uppercase;
     border-radius: 8px;
+    display: flex;
+    justify-content: center;
+  }
+  .celulares h2{
+    color: #f5f5f5;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 2rem;
+    font-weight: 700;
+    margin-top: 80px;
+    margin-bottom: 80px;
+    position: absolute;
+    z-index: 3;
+  }
+  .celulares-content {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 22, 40, .6 );
+    border-radius: 8px;
+    z-index: 2;
   }
 
   .redes {
