--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -148,14 +148,19 @@
     position: relative;
     margin-top: 150px;
     margin-bottom: 30px;
+    place-content: center;
   }
 
   .shortcuts__menu ul {
+    width: 100%;
+    margin: 0 auto;
+    padding: 0;
     height: auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
     place-content: center;
+    
   }
 
   .shortcuts__menu ul li {
@@ -166,13 +171,14 @@
     list-style: none;
     display: flex;
     flex-direction: column;
-    column-gap: 1rem;
+    column-gap: 2rem;
     justify-content: center;
     align-items: center;
     text-align: center;
     line-height: 1.6;
     letter-spacing: 1px;
     font-family: 'Roboto', sans-serif;
+    
   }
 
   .shortcuts__menu ul li i {
@@ -184,6 +190,10 @@
   .shortcuts__menu ul li a {
     margin: 0 auto;
     color: #373838;
+    padding: 0;
+    text-align: center;
+    text-decoration: none;
+
   }
 
 
@@ -197,19 +207,26 @@
     header{
       width: 100%;
     }
-    .header-topper{
+    header .header-topper { 
       display: none;
-      
+    }
+    #header-container {
+      top: 0;
     }
     .shortcuts__menu ul li {
       width: 20%;
       height: 35px;
       margin: 0 auto;
+      padding: 0;
       font-size: 12px;
+      text-align: center;
     }
 
     .shortcuts__menu ul li a {
+      margin: 0 auto;
+      padding: 0;
       font-size: 12px;
+      text-align: center;
     }
 
     .shortcuts__menu ul li i {
