--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -298,7 +298,7 @@
   }
 
   #hero-container .hero-promo p span {
-    color: #000;
+    color: #346add;
     font-weight: 600;
   }
   .hero-promo  button{
