--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -78,7 +78,7 @@
     margin: 0 auto;
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around ;
     align-items: center;
     width: 100%;
     height: 80px;
@@ -110,10 +110,11 @@
     letter-spacing: 1px;
   }
 
-  #nav-button {
+  .button-menu {
     width: 80px;
     height: 40px;
     margin: 0 auto;
+    margin-right: 0;
     background-color: #000;
     color: #f5f5f5;
     font: 12px;
@@ -129,11 +130,56 @@
     transition: all .2s;
   }
 
-  #nav-button:hover {
-    background-color: #3f3f3f;
+  .button-menu:hover {
+    background-color: #0d0d0d;
     transform: scale(1.1);
+    font-weight: 700;
+    border: solid .5px #f5f5f5;
   }
+  
+  #nav-list {
+  position: fixed;
+  top: 100px;
+  right: 0;
+  width: 300px;
+  height: 100vh;
+  margin-right: -100%;
+  background-color:#000;
+  z-index: 998;
+  transition: all .3s linear;
+  border-bottom: 2px solid #060120;
+    box-shadow: 0px 5px 15px #060120;
 
+}
+.nav-links  a {
+  width: 90%;
+  margin:  0 auto;
+  display: flex;
+  align-items: center;
+  line-height: 1.6;
+  font-family: 'Poppins', sans-serif;
+  text-decoration: none;
+  color: #f5f5f5;
+  font-size: 16px;
+  text-align: left;
+  padding: 10px;
+  gap: 10px;
+  transition: all .2s ;
+}
+.nav-links  a i {
+  font-size: 15px;
+}
+/* .nav-links  a hover gradeant */
+.nav-links  a:hover {
+  font-weight: 700;
+  color: transparent;
+    background: linear-gradient(to right, rgb(185, 100, 255), rgb(103, 74, 255), rgb(12, 204, 238));
+    -webkit-background-clip: text;
+    
+  }
+#nav-list.show{
+  margin-right: 0;
+}
   /*  */
   #main-container {
     max-width: 1200px;
@@ -171,8 +217,6 @@
     width: 100%;
     height: 30px;
     list-style: none;
-    display: flex;
-    flex-direction: column;
     column-gap: 2rem;
     justify-content: center;
     align-items: center;
@@ -189,12 +233,17 @@
     color: #346add;
   }
 
-  .shortcuts__menu ul li a {
+  .shortcuts__menu ul li  a {
     margin: 0 auto;
     color: #373838;
     padding: 0;
+    display: flex;
+    flex-direction: column;
     text-align: center;
     text-decoration: none;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
 
   }
 
@@ -205,6 +254,7 @@
       padding: 0;
       box-sizing: border-box;
       place-content: center;
+      
     }
     header{
       width: 100%;
@@ -214,6 +264,14 @@
     }
     #header-container {
       top: 0;
+    }
+    #nav-list {
+      top: 80px;
+    }
+    .nav-links a{
+  
+      justify-content: flex-start;
+      
     }
     .shortcuts__menu ul li {
       width: 100%;
@@ -277,12 +335,13 @@
   }
   
   #hero-container .hero-promo h2 {
+    width: 100%;
+    margin: 0  auto;
     font-family: 'Roboto', sans-serif;
     text-align: center;
     color: #f5f5f5;
     font-size: 30px;
-    margin: 20px;
-
+    margin-top: 20px;
   }
 
   #hero-container .hero-promo p {
@@ -294,8 +353,11 @@
     background-color: rgb(0, 22, 40, .45);
     border-radius: 15px;
     display: block;
-    position: relative;
+    position: absolute;
     margin: 25px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 
   #hero-container .hero-promo p span {
@@ -315,6 +377,16 @@
     margin: 15px;
     transition: .3s;
   }
+  .btns-container{
+    margin: 0 auto;
+    display: flex;  
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 90%;
+    left: 50%;
+    transform: translate(-50%, -50%); 
+  }
 
   .hero-promo button:hover {
     /* filter: drop-shadow(2px 2px 0px rgb(185, 100, 255)) drop-shadow(2px 2px 0px rgb(103, 74, 255)) drop-shadow(2px 2px 0px rgb(12, 204, 238));
@@ -331,30 +403,13 @@
   .hero-promo i:hover{
     transform: scale(1.1);
   }
-  /* 
-  .hero-promo {
-    max-width: 1200px;
-    min-width: 300px;
-    margin: 0 auto;
-    width: 100%;
-    height: 500px;
-    display: flex;
-    flex-wrap: nowrap;
-    align-items: center;
-    justify-content: center;
-    margin-top: 30px;
-    margin-bottom: 60px;
-    background-color: #fffdfd;
-    border-radius: 10px;
-    border-bottom: solid 1px #212121;
-    box-shadow: 0px 0px 5px 0px #212121 .5;
-  }
+  .hero-promo  i:nth-child(1) {
+    margin-right: 10px;
+    }
+    .hero-promo  i:nth-child(2) {
+      margin-left: 10px;
+      } 
 
-  .hero-promo img {
-    border-radius: 10px;
-  }
-
- */
   /* Cards */
 
   .cards-container {
@@ -366,7 +421,6 @@
     height: auto;
     gap: 53px;
     /* box-shadow: 0px 2px 5px rgba(0, 0, 0, .2); */
-
     background: #f5f5f5;
     border-radius: 3px;
   }
@@ -503,7 +557,7 @@
     text-transform: uppercase;
     margin-bottom: 60px;
     margin-top: 60px;
-    border-radius: 8px;
+    border-radius: 4px;
     display: flex;
     justify-content: center;
   }
@@ -513,7 +567,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 22, 40, .45 );
-    border-radius: 8px;
+    border-radius: 4px;
     position: relative;
   }
   .hogar h2{
