--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,6 +17,16 @@
   h3 {
     font-family: 'Roboto', sans-serif;
   }
+/* 
+::-webkit-scrollbar {
+
+  width: 10px;
+  
+  }
+  ::-webkit-scrollbar-thumb {
+    background-color:#585858;
+    border-radius: 2px;
+    } */
 
   :root {
     --primary-color: #0d0d0d;
@@ -139,7 +149,7 @@
   
   #nav-list {
   position: fixed;
-  top: 100px;
+  top: 110px;
   right: 0;
   width: 300px;
   height: 100vh;
@@ -147,8 +157,8 @@
   background-color:#000;
   z-index: 998;
   transition: all .3s linear;
-  border-bottom: 2px solid #060120;
-    box-shadow: 0px 5px 15px #060120;
+  border-bottom: 1px solid #060120;
+  box-shadow: 0px 3px 5px 3px #060120;
 
 }
 .nav-links  a {
@@ -169,7 +179,6 @@
 .nav-links  a i {
   font-size: 15px;
 }
-/* .nav-links  a hover gradeant */
 .nav-links  a:hover {
   font-weight: 700;
   color: transparent;
@@ -312,9 +321,9 @@
     padding: 0;
     width: 100%;
     height: 500px;
-    background-image: url(../productos/hogar/banner1.jpg);
-    background-position: center;
-    background-size: cover;
+    background-image: url(../productos/hogar/stanley_termo1.jpg);
+    background-position:center;
+    background-size:cover;
     background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
@@ -543,7 +552,7 @@
     text-transform: uppercase;
   }
 
-  .hogar {
+  #gaming {
     max-width: 1200px;
     margin: 0 auto;
     height: 500px;
@@ -561,6 +570,46 @@
     display: flex;
     justify-content: center;
   }
+  .hogar {
+    max-width: 1200px;
+    margin: 0 auto;
+    height: 500px;
+    position: relative;
+    background-image: url(/assets/productos/hogar/familia-hogar_452079-1192.jpg);
+    background-repeat: no-repeat;
+    background-position: top;
+    background-size: cover;
+    color: #0a0330;
+    text-align: center;
+    text-transform: uppercase;
+    margin-bottom: 60px;
+    margin-top: 60px;
+    border-radius: 4px;
+    display: flex;
+    justify-content: center;
+  }
+  
+  #gaming-content {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 22, 40, .45 );
+    border-radius: 4px;
+    position: relative;
+  }
+  .gaming h2{
+    color: #f5f5f5;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 2rem;
+    font-weight: 700;
+    position: absolute;
+    z-index: 3;
+    margin-top: 80px;
+    margin-bottom: 80px;
+  }
+
   .hogar-content {
     margin: 0;
     padding: 0;
@@ -581,6 +630,7 @@
     margin-top: 80px;
     margin-bottom: 80px;
   }
+  
   .celulares {
     max-width: 1200px;
     margin: 0 auto;
