--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -732,7 +732,21 @@
   .footer .box {
     margin: 20px;
   }
-
+  @media (max-width:768px){
+    *{margin: 0 auto;
+    }
+    .footer{
+      margin: 0 auto;
+      width: 100%;
+      height:100vh;
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+      justify-content: center;
+      align-content: center;
+      font-size: 14px;
+      line-height: 1.2;
+    }
+  }
   .end-footer {
     background-color: #212121;
     color: #f5f5f5;
