--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -423,12 +423,15 @@
     justify-content: center;
     align-items: center;
     gap: 30px;
-    /* box-shadow: 0px 2px 5px rgba(0, 0, 0, .2); */
     background: #f5f5f5;
     border-radius: 3px;
   }
-
-  
+  .cardsContainer{
+    max-width: 1200px;
+    margin: 0 auto;
+    width: 100%;
+    display: block;
+  }
   .cardsContainer h2 {
     text-align: center;
     margin-top: 10px;
@@ -445,8 +448,24 @@
     gap: 30px;
     margin-top: 16px;
     }
-  div {
-    place-content: center;
+    @media (max-width:576px){
+      .cards-container {
+        max-width: 576px;
+        width: 100%;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+      }
+    }
+  .button-add {
+    width: 100px;
+    height: 40px;
+    color: #f5f5f5;
+    background: #9c9c9c;
+    position: absolute;
   }
 
   .card {
@@ -463,6 +482,7 @@
     justify-content: center;
     margin-bottom: 10px;
     transition: .5s;
+    position: relative;
   }
   .card_text{
     text-align: center;
