--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -474,10 +474,10 @@
     padding: 5px;
     border-radius: 5px;
     background: #f5f5f5;
-    /* background: linear-gradient(to left, rgb(189, 136, 231), rgb(169, 154, 245), rgb(136, 211, 224)); */
     border: solid 1px #a8a8a8;
-    display: flex;
-    flex-direction: column;
+    display: block;
+    /*     display: flex;
+    flex-direction: column; */
     align-items: center;
     justify-content: center;
     margin-bottom: 10px;
@@ -486,9 +486,17 @@
   }
   .card_text{
     text-align: center;
-    width: 200px;
+    width: 100%;
     height: 200px;
     display: block; 
+    font-size: 16px;
+    font-weight: 500;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    align-items: center;
+    justify-content: center;
+
   }
   .card p {
     font-family: 'Roboto', sans-serif;
@@ -501,14 +509,19 @@
     transform: scale(1.1);
     box-shadow: 0px 10px 18px rgba(0, 0, 0, .2);
   }
-
-  .card img {
-    width: 150px;
+  .card__img {
+    max-width: 280px;
+    margin: 0 auto;
+    width: 100%;
     height: 150px;
+    margin-top: 0;
+    overflow: hidden;
     border-radius: 5px;
     margin-bottom: 15px;
-    margin-top: 10px;
-    object-fit: contain;
+  }
+  .card__img img {
+    width: 100%;
+    border-radius: 5px;
 
   }
 
